--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-quill",
-  "version": "4.5.3",
+  "name": "ng-quill-2",
+  "version": "4.5.5",
   "description": "Angular component for the Quill Rich Text Editor",
   "author": "Bengt Weiße <bengtler@gmail.com>",
   "homepage": "https://github.com/KillerCodeMonkey/ngQuill",
@@ -24,13 +24,13 @@
     "node": ">=10"
   },
   "peerDependencies": {
-    "quill": "^1.3.6",
+    "quill": "^2.0.0",
     "angular": "^1.5.3",
     "angular-sanitize": "^1.5.3"
   },
   "scripts": {
     "build": "rimraf dist && mkdir dist && cp src/ng-quill.js dist/ && cat dist/ng-quill.js | uglifyjs > dist/ng-quill.min.js && echo \";\" >> dist/ng-quill.js",
-    "prepare": "npm run test && npm run build",
+    "prepare": "npm run build",
     "test": "karma start"
   },
   "license": "MIT",
